fixed wrap

--- a/src/public/components/ui/cards/answer/answer.module.sass
+++ b/src/public/components/ui/cards/answer/answer.module.sass
@@ -24,6 +24,7 @@
   width: 100%
   font-weight: 300
   color: #333
+  white-space: pre-wrap
   &:focus
     outline: none
   &::placeholder
