--- a/src/public/components/ui/cards/question/question.module.sass
+++ b/src/public/components/ui/cards/question/question.module.sass
@@ -25,6 +25,8 @@
   width: 100%
   font-weight: 300
   color: #333
+  white-space: pre-wrap
+
   &:focus
     outline: none
   &::placeholder
